# KrakeyBot

./: .gitignore  CLAUDE.md  CogniBot_Checklist.md  CogniBot_DevSpec_v2.1.md  KrakeyBot_Checklist.md  KrakeyBot_DevSpec_v2.1.md  PLUGINS.md  README.md  SANDBOX.md  config.yaml.example  main.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish-testpypi.yml  publish.yml
docs/: architecture.html  extending-core.md
docs/design/: modifiers-and-self-model.md  reflects-and-self-model.md
docs/scripts/: build_arch_graph.py  serve_arch_graph.py
examples/custom_embedder/: README.md  hash_embedder.py
krakey/: bootstrap.py  main.py  self_agent.py
krakey/cli/: __init__.py  _banner.py  _meta.py  commands.py  install.py  lifecycle.py  release.py
krakey/engine_system/: __init__.py  catalog.py  defaults.py  meta_loader.py  registry.py
krakey/engine_system/tests/: test_engine_registry.py  test_meta_loader.py
krakey/engines/: __init__.py  bundle.py  catalog.py  registry.py
krakey/engines/context/: __init__.py  default.py  meta.yaml
krakey/engines/decision/: __init__.py  action_executor.py  hypothalamus.py  meta.yaml  tool_call_parser.py
krakey/engines/dispatch/: __init__.py  default.py  dispatcher.py  meta.yaml
krakey/engines/embedder/: __init__.py  default.py  meta.yaml
krakey/engines/explicit_history/: __init__.py  default.py  meta.yaml  sliding_window.py
krakey/engines/heartbeat/: __init__.py  compact.py  default.py  idle.py  meta.yaml  orchestrator.py
krakey/engines/llm_client_factory/: __init__.py  _client.py  meta.yaml
krakey/engines/llm_factory/: __init__.py  _resolve.py  default.py  meta.yaml
krakey/engines/memory/: __init__.py  default.py  memos.py  meta.yaml
krakey/engines/recall/: __init__.py  default.py  gm_query.py  incremental.py  memos.py  meta.yaml
krakey/engines/reranker/: __init__.py  default.py  meta.yaml
krakey/environment/: __init__.py
krakey/environment/local/: __init__.py  local_environment.py
krakey/environment/router/: __init__.py  router.py
krakey/environment/sandbox/: __init__.py  preflight.py  sandbox_environment.py
krakey/install/: __init__.py  service.py
krakey/interfaces/: channel.py  duck.py  environment.py  install_service.py  modifier.py  plugin_context.py  reflect.py  sensory.py  tentacle.py  tool.py
krakey/interfaces/engines/: __init__.py  context.py  decision.py  dispatch.py  embedder.py  explicit_history.py  heartbeat.py  llm_factory.py  memory.py  recall.py  reranker.py
krakey/interfaces/services/: __init__.py  memory.py  prompt_builder.py
krakey/llm/: resolve.py
krakey/memory/: graph_memory.py  writer.py
krakey/memory/gm/: __init__.py  query.py  storage.py
krakey/memory/knowledge_base/: __init__.py  entry_store.py  registry.py
krakey/memory/recall/: scoring.py  (+2 more)
krakey/models/: config_backup.py  self_model.py  stimulus.py
krakey/onboarding/: __init__.py  __main__.py  _ui.py  wizard.py
krakey/plugin_system/: __init__.py  catalogue.py  config.py  loader.py
krakey/plugins/: __init__.py
krakey/prompt/: builder.py  dna.py  dna.txt  elements.py  layers.py  views.py
krakey/runtime/: _pause_io.py  runtime.py  service_resolver.py
krakey/sandbox/: __init__.py  agent.py  backend.py  policy.py  subprocess_runner.py
krakey/tools/: perf_bench.py
krakey/utils/: gm_query.py  model_context.py  tokens.py
overviews/nodes/: recall.md
scripts/: bench_gm.py  build_docs.py  dump_gm.py
src/: bootstrap.py  hypothalamus.py  main.py  self_agent.py
src/dashboard/: app_factory.py  events_ws.py  middleware.py  server.py  templates.py  web_chat.py
src/interfaces/: plugin_context.py  reflect.py  sensory.py  tentacle.py
src/llm/: client.py  resolve.py
src/memory/: _db.py  graph_memory.py  knowledge_base.py  recall.py  schemas.sql  writer.py
src/models/: config.py  self_model.py  stimulus.py
src/onboarding/: __init__.py  __main__.py  wizard.py
src/plugin_system/: __init__.py  config.py  discovery.py  loader.py
src/plugins/: __init__.py  loader.py  plugin_config.py  unified_discovery.py
src/prompt/: builder.py  dna.py  dna.txt  layers.py  views.py
src/reflects/: __init__.py  context.py  discovery.py  protocol.py  registry.py
src/runtime/: action_executor.py  batch_tracker.py  colors.py  compact.py  dashboard_lifecycle.py  dispatcher.py  event_bus.py  fatigue.py  heartbeat_logger.py  heartbeat_orchestrator.py  hibernate.py  override_commands.py  plugin_registrar.py  runtime.py  setup_mode.py  sliding_window.py  stimulus_buffer.py
src/sandbox/: __init__.py  backend.py  policy.py  subprocess_runner.py
src/sensories/: cli_input.py  telegram.py
src/sleep/: clustering.py  index_rebuild.py  migration.py  sleep_manager.py
src/tentacles/: action.py  coding.py  gui_control.py  memory_recall.py  search.py  telegram_reply.py  web_chat_reply.py
src/tools/: perf_bench.py
src/utils/: __init__.py  model_context.py
tests/: _fake_memory.py  _runtime_helpers.py  recall-result.test.py  test_action.py  test_action_executor.py  test_batch_tracker.py  test_bootstrap.py  test_channel.py  test_cli.py  test_cli_dashboard_url.py  test_cli_input.py  test_cli_pause_resume.py  test_client.py  test_clustering.py  test_coding_tentacle.py  test_colors.py  test_commands.py  test_compact.py  test_config.py  test_core_impl_config.py  test_dashboard_auth.py  test_dashboard_events_ws.py  test_dashboard_invariant.py  test_dashboard_log_capture.py  test_dashboard_memory_api.py  test_dashboard_plugins_api.py  test_dashboard_restart.py  test_dashboard_server.py  test_dashboard_settings.py  test_dashboard_url_gate.py  test_decision_engine.py  test_dispatch_engine.py  test_dna_hot_reload.py  test_embedder_slot.py  test_engine_registry.py  test_environment_router.py  test_event_bus.py  test_examples_custom_embedder.py  test_explicit_history_engine.py  test_fatigue.py  (+88 more)
workspace/: GENESIS.md
workspace/plugins/: README.md
workspace/sensories/: README.md
workspace/tentacles/: README.md
(+387 files in other folders)
